test/extern/bradc/sparseToExtern.good
sparseToExtern.chpl:12: error: c_ptrTo unsupported array type
